--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
+    "cron": "^1.4.1",
     "express": "^4.16.3",
     "nodemon": "^1.18.4"
   },
