--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3'
 services:
+  nginx:
+    restart: always
+    build:
+      context: ./nginx
+    ports:
+      - '3000:80'
   client:
     build:
       context: ./client
