--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine
-WORKDIR "./app"
+WORKDIR "/app"
 COPY ./package.json ./
 RUN npm install
 COPY . .
-RUN ["npm", "run", "server"]
+CMD ["npm", "run", "dockerserver"]
 
