--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon --ignore ../client/ index.js",
     "client": "npm run start --prefix ../client",
-    "dev": " concurrently \"npm run server\" \"npm run client\" "
+    "dev": " concurrently \"npm run server\" \"npm run client\" ",
+    "dockerserver": "node index.js"
   },
   "keywords": [],
   "author": "",
