--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,11 @@ services:
       - '3000:80'
   client:
     build:
+      dockerfile: Dockerfile.dev
       context: ./client
+    volumes:
+      - /app/node_modules
+      - ./client:/app
   api:
     build:
       context: ./server
